@@ -1,3 +1,5 @@
+These variables are used and partly setup by the printer
+
 ### Formatting Variables
 
 Name                              | Description
