@@ -4,7 +4,8 @@
    for file in [[fileManager directoryContentsAtPath:@"/tmp/MulleScionDox"] sortedArrayUsingSelector:@selector( compare:)]
       if [file hasSuffix:@".scion"] and 
          not [file hasPrefix:@"_"] and 
-         not [file hasPrefix:@"index."] and 
+         not [file hasPrefix:@"index."]
+
          [result addObject:file];
       endif
    endfor 
