@@ -14,7 +14,7 @@
 
 
 {% block scion_contents_left %}
-   <h2>{{ @"!_Introduction.scion" | stringByDeletingPathExtension }}</h2>
+   <h2>Introduction</h2>
    {% filter [Hoedown htmlEscapedFilter] %}
    {% includes verbatim "!_Introduction.scion" %}
    {% endfilter %}
